DR-2281 Remove the DataRepoException class and replace with ErrorReportException (#1158)
* Remove the DataRepoException class and replace with ErrorReportException

which is the base terra common lib class

* Try to format messages more nicely